force-app/main/default/objects/leaseworks__Amortization_Schedule__c/leaseworks__Amortization_Schedule__c.object-meta.xml
<CustomObject>
    <label>Amortization Schedule</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Amortization Schedule</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>