force-app/main/default/objects/leaseworks__Amortization_Schedule__c/fields/leaseworks__Financing__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Financing__c</fullName>
    <label>Financing</label>
    <referenceTo>leaseworks__Financing__c</referenceTo>
    <relationshipLabel>Amortization Schedule</relationshipLabel>
    <relationshipName>Amortization_Schedule</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>