force-app/main/default/objects/leaseworks__Amortization_Schedule__c/fields/leaseworks__Outstanding_Balance__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Outstanding_Balance__c</fullName>
    <label>Outstanding Balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>