force-app/main/default/objects/leaseworks__Amortization_Schedule__c/fields/leaseworks__Period_Sequence__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Period_Sequence__c</fullName>
    <label>Period</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>