force-app/main/default/objects/leaseworks__Amortization_Schedule__c/fields/leaseworks__Principal_Repayment__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Principal_Repayment__c</fullName>
    <label>Principal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>